# edu.smid

cpp_projects/0201_hellocpp/: myfirst.cpp
cpp_projects/0202_user_input/: yourcat.cpp
cpp_projects/0203_prototypes/: sqrt.cpp
cpp_projects/0204_user_functions/: convert_lyr2au.cpp  convert_stone2lb.cpp  ourfunc.cpp
cpp_projects/0301_numerical_types/: compile_all.bat  limits.cpp
cpp_projects/0401_complex_types/: arrays.cpp  structs.cpp
cpp_projects/0402_pointers/: address.cpp  use_delete.cpp  use_new.cpp
cpp_projects/0501_loops/: compstr.cpp  for_cycle.cpp  for_str.cpp  textin.cpp  textin_test01.txt  waiting.cpp  while_str.cpp
cpp_projects/0601_branching/: cctypes.cpp  cctypes_test01.txt  cin_only_num.cpp  switch.cpp
cpp_projects/0701_functions/: arrfunc1.cpp  arrfunc2.cpp  arrfunc3.cpp  fun_ptr.cpp  lotto.cpp  ruler.cpp  strgback.cpp  strgfun.cpp  travel.cpp
cpp_projects/0801_enhanced_functions/: firstref.cpp  funtemp.cpp  inline.cpp  structref.cpp  swaps.cpp
cpp_projects/1000_classes/: build.bat  usestocks1.cpp
cpp_projects/1201_queue/: CMakeLists.txt  README.md
cpp_projects/1201_queue/simlib/: CMakeLists.txt
cpp_projects/1201_queue/simlib/include/simlib/: customer.h  queue.h
cpp_projects/1201_queue/simlib/src/: customer.cpp  queue.cpp
cpp_projects/1201_queue/simlib_bin/: CMakeLists.txt  main.cpp
cpp_projects/1400_composition/studentlib/: CMakeLists.txt
cpp_projects/1400_composition/studentlib/include/studentlib/: student.h
cpp_projects/1400_composition/studentlib/src/: student.cpp
maze/: astar.py
rcoster/: nb.ipynb  nb.py
(+47 files in other folders)
